# rssbot

./: README.rst  pyproject.toml
mods/: __init__.py  fnd.py  irc.py  mbx.py  mdl.py  rss.py  tdo.py  tmr.py
rssbot/: __init__.py  configs.py  excepts.py  find.py  run.py  runtime.py  storage.py
rssbot/modules/: __init__.py  irc.py  rss.py
